@@ -118,6 +118,8 @@ documents those changes that are of interest to users and admins.
  -- In sched/wiki2, add support for MODIFYJOB option "MINSTARTTIME=<time>"
     to modify a job's earliest start time.
  -- In sbcast, fix bug with large files and causing sbcast to die.
+ -- In sched/wiki2, add support for COMMENT= option in STARTJOB and CANCELJOB
+    commands.
 
 * Changes in SLURM 1.2.21
 =========================
